[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/FireParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Events/Fire.gd" type="Script" id=2]
[ext_resource path="res://Objects/ToolIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/fire.ogg" type="AudioStream" id=4]

[sub_resource type="SphereShape" id=1]
radius = 0.247103

[node name="Fire" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0868477, 0 )
shape = SubResource( 1 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FailTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ToolIcon" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )

[node name="Fire" parent="." instance=ExtResource( 1 )]

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="mouse_entered" from="." to="." method="_on_Leak_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Leak_mouse_exited"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="FailTimer" to="." method="_on_FailTimer_timeout"]
